fix: broken tags on blog posts by removing whitespace and using an unordered list

--- a/src/assets/styles/_blog.scss
+++ b/src/assets/styles/_blog.scss
@@ -37,4 +37,5 @@ article {
 	display: flex;
 	justify-content: center;
 	gap: 10px;
+	list-style-type: none;
 }
